--- a/src/Components/Photos/Photos.css
+++ b/src/Components/Photos/Photos.css
@@ -10,7 +10,7 @@
 
 .photo-slider-track {
   display: flex;
-  gap: 20px;
+  gap: 5px;
   animation: scroll 30s linear infinite;
 }
 
@@ -34,15 +34,26 @@
 }
 
 .photo-slider-item h5 {
-  margin: 5px 0 0;
+  margin: 1px 0 0;
   font-size: 12px;
   font-weight: 600;
+  text-align: center;
 }
 
 .photo-slider-item h6 {
-  margin: 5px 0;
+  margin: 1px 0;
   font-size: 14px;
   color: #666;
+  text-align: center;
+}
+
+.photo-slider-item h6.rank {
+  font-weight: bold;
+}
+
+.photo-slider-item h6.exam {
+  font-style: normal;
+  color: #444;
 }
 
 .photo-slider-item:hover {
@@ -56,14 +67,4 @@
   100% {
     transform: translateX(calc(-150px * 15));
   }
-}
-
-/* Add zoom effect for the middle item */
-.photo-slider-container {
-  perspective: 1000px;
-}
-
-.photo-slider-item:nth-child(8) {
-  transform: scale(1.4);
-  z-index: 10;
 }
